tests/transpiler/x/hs/in_operator.error
run: exit status 1

/workspace/mochi/tests/transpiler/x/hs/in_operator.hs:8:22: error:
    Bang pattern in expression context: !(5 `elem` xs)
    Did you mean to add a space after the '!'?
  |
8 |     print (fromEnum (!(5 `elem` xs)))
  |                      ^^^^^^^^^^^^^^
