tests/transpiler/x/hs/in_operator.hs
-- Generated by Mochi transpiler v0.10.31 on 2025-07-19 20:05:04 GMT+7
import Data.List (isInfixOf, union, intersect, (\\))
xs = [1, 2, 3]

main :: IO ()
main = do
    print (2 `elem` xs)
    print (fromEnum (!(5 `elem` xs)))
